[gd_scene load_steps=11 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://models/shape_4.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Camera.gd" type="Script" id=3]
[ext_resource path="res://grid.png" type="Texture" id=5]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
params_cull_mode = 2
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
params_cull_mode = 2
params_depth_draw_mode = 1
albedo_color = Color( 0, 1, 1, 0.05 )

[sub_resource type="QuadMesh" id=5]
size = Vector2( 100, 100 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 5 )
uv1_scale = Vector3( 100, 100, 1 )

[node name="main" type="Spatial"]
script = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -1, -6.32203e-08, 6.32203e-08, 0, 0.707107, 0.707107, -8.9407e-08, 0.707107, -0.707107, -12, 29, -32 )
shadow_enabled = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.00203, 22 )
script = ExtResource( 3 )

[node name="shape" type="MeshInstance" parent="."]
material_override = SubResource( 1 )
mesh = ExtResource( 2 )
material/0 = null

[node name="wireframe" type="ImmediateGeometry" parent="shape"]
visible = false
material_override = SubResource( 2 )
cast_shadow = 0

[node name="axis" type="ImmediateGeometry" parent="shape"]
material_override = SubResource( 3 )
cast_shadow = 0

[node name="bounding_box" type="ImmediateGeometry" parent="shape"]
material_override = SubResource( 4 )

[node name="vertices" type="Spatial" parent="shape"]
visible = false

[node name="grid" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.01, 0 )
visible = false
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
show_behind_parent = true
margin_right = 210.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 0.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wireframe" type="CheckButton" parent="UI"]
margin_left = 8.0
margin_right = 155.0
margin_bottom = 40.0
text = "Wireframe"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vertices" type="CheckButton" parent="UI"]
margin_left = 8.0
margin_top = 32.0
margin_right = 155.0
margin_bottom = 72.0
text = "Vertices"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Model_faces" type="CheckButton" parent="UI"]
margin_left = 8.0
margin_top = 64.0
margin_right = 155.0
margin_bottom = 104.0
text = "Model transparency"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI"]
margin_left = 14.0
margin_top = 96.0
margin_right = 69.0
margin_bottom = 110.0
text = "Opacity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Model_opacity" type="HSlider" parent="UI"]
margin_left = 8.0
margin_top = 112.0
margin_right = 148.0
margin_bottom = 128.0
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoundingBox" type="CheckButton" parent="UI"]
margin_left = 8.0
margin_top = 128.0
margin_right = 155.0
margin_bottom = 168.0
pressed = true
text = "Box transparency"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UI"]
margin_left = 14.0
margin_top = 160.0
margin_right = 69.0
margin_bottom = 174.0
text = "Opacity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoundingBox_opacity" type="HSlider" parent="UI"]
margin_left = 8.0
margin_top = 176.0
margin_right = 148.0
margin_bottom = 192.0
max_value = 1.0
step = 0.05
value = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="UI/Wireframe" to="." method="_on_Wireframe_toggled"]
[connection signal="toggled" from="UI/Vertices" to="." method="_on_Vertices_toggled"]
[connection signal="toggled" from="UI/Model_faces" to="." method="_on_Model_faces_toggled"]
[connection signal="value_changed" from="UI/Model_opacity" to="." method="_on_Model_opacity_value_changed"]
[connection signal="toggled" from="UI/BoundingBox" to="." method="_on_BoundingBox_toggled"]
[connection signal="value_changed" from="UI/BoundingBox_opacity" to="." method="_on_BoundingBox_opacity_value_changed"]
